fix project cards due to z-index issues

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ h3 {
 
 .card {
   margin: 10px;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 .card-body {
